--- a/reports/output.xml
+++ b/reports/output.xml
@@ -1,78 +1,169 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<robot generator="Robot 4.0.3 (Python 3.9.6 on win32)" generated="20210726 18:15:12.077" rpa="false" schemaversion="2">
+<robot generator="Robot 4.0.3 (Python 3.9.6 on win32)" generated="20210727 14:31:24.582" rpa="false" schemaversion="2">
 <suite id="s1" name="Testsuites" source="D:\Users\pavanonkar\IdeaProjects\Framework_Proj\testsuites">
 <suite id="s1-s1" name="Ui" source="D:\Users\pavanonkar\IdeaProjects\Framework_Proj\testsuites\ui">
 <kw name="Log To Console" library="BuiltIn" type="SETUP">
 <arg>Things to execute once before all suites</arg>
 <doc>Logs the given message to the console.</doc>
-<status status="PASS" starttime="20210726 18:15:12.124" endtime="20210726 18:15:12.125"/>
+<status status="PASS" starttime="20210727 14:31:24.628" endtime="20210727 14:31:24.629"/>
 </kw>
 <suite id="s1-s1-s1" name="M1 Authentication" source="D:\Users\pavanonkar\IdeaProjects\Framework_Proj\testsuites\ui\m1_authentication.robot">
-<test id="s1-s1-s1-t1" name="ABC-1 : Coach Valid Login">
-<kw name="Verify Valid Login Credentials">
-<arg>arun.i@shenzyn.com</arg>
-<arg>Shenzyn@123</arg>
+<test id="s1-s1-s1-t1" name="Scenario:Verify Valid Coach Login">
+<kw name="Given I am able to login to coach" library="authentication_steps">
+<kw name="Login To Application As Coach" library="authentication_page">
+<kw name="Get Login Credentials" library="testbed_parser">
+<var>${username}</var>
+<var>${password}</var>
+<arg>coach_login</arg>
+<kw name="Join Path" library="OperatingSystem">
+<var>${test_data_file}</var>
+<arg>D:\\Users\\pavanonkar\\IdeaProjects\\Framework_Proj\\utilities\\testbed_parsers/../../config</arg>
+<arg>testbed_data.json</arg>
+<doc>Joins the given path part(s) to the given base path.</doc>
+<msg timestamp="20210727 14:31:25.307" level="INFO">${test_data_file} = D:\Users\pavanonkar\IdeaProjects\Framework_Proj\config\testbed_data.json</msg>
+<status status="PASS" starttime="20210727 14:31:25.307" endtime="20210727 14:31:25.307"/>
+</kw>
+<kw name="Load JSON From File" library="JSONLibrary">
+<var>${test_data_file_content}</var>
+<arg>${test_data_file}</arg>
+<doc>Load JSON from file.</doc>
+<msg timestamp="20210727 14:31:25.318" level="INFO">${test_data_file_content} = {'coach_login': {'username': 'arun.i@shenzyn.com', 'password': 'Shenzyn@123'}, 'organisation_login': {'username': 'arun.i@shenzyn.com', 'password': 'Shenzyn@123'}}</msg>
+<status status="PASS" starttime="20210727 14:31:25.307" endtime="20210727 14:31:25.318"/>
+</kw>
+<kw name="Get From Dictionary" library="Collections">
+<var>${username}</var>
+<arg>${test_data_file_content['${profile}']}</arg>
+<arg>username</arg>
+<doc>Returns a value from the given ``dictionary`` based on the given ``key``.</doc>
+<msg timestamp="20210727 14:31:25.319" level="INFO">${username} = arun.i@shenzyn.com</msg>
+<status status="PASS" starttime="20210727 14:31:25.318" endtime="20210727 14:31:25.319"/>
+</kw>
+<kw name="Get From Dictionary" library="Collections">
+<var>${password}</var>
+<arg>${test_data_file_content['${profile}']}</arg>
+<arg>password</arg>
+<doc>Returns a value from the given ``dictionary`` based on the given ``key``.</doc>
+<msg timestamp="20210727 14:31:25.320" level="INFO">${password} = Shenzyn@123</msg>
+<status status="PASS" starttime="20210727 14:31:25.319" endtime="20210727 14:31:25.320"/>
+</kw>
+<msg timestamp="20210727 14:31:25.320" level="INFO">${username} = arun.i@shenzyn.com</msg>
+<msg timestamp="20210727 14:31:25.320" level="INFO">${password} = Shenzyn@123</msg>
+<status status="PASS" starttime="20210727 14:31:25.306" endtime="20210727 14:31:25.320"/>
+</kw>
 <kw name="Login To application" library="authentication_page">
-<arg>${u_name}</arg>
-<arg>${passwd}</arg>
+<arg>${username}</arg>
+<arg>${password}</arg>
 <kw name="Launch the Application" library="authentication_page">
 <kw name="Open Browser" library="SeleniumLibrary">
 <arg>http://${APPLICATION_HOST}/#/home?ref=bm</arg>
 <arg>${BROWSER}</arg>
 <doc>Opens a new browser instance to the optional ``url``.</doc>
-<msg timestamp="20210726 18:15:12.543" level="INFO">Opening browser 'gc' to base url 'http://equip.stage.shenzyn.com/#/home?ref=bm'.</msg>
-<kw name="Capture Page Screenshot" library="SeleniumLibrary">
-<doc>Takes a screenshot of the current page and embeds it into a log file.</doc>
-<status status="FAIL" starttime="20210726 18:15:16.964" endtime="20210726 18:15:16.964"/>
-</kw>
-<msg timestamp="20210726 18:15:16.964" level="WARN">Keyword 'Capture Page Screenshot' could not be run on failure: Execution terminated by signal</msg>
-<status status="FAIL" starttime="20210726 18:15:12.542" endtime="20210726 18:15:16.966"/>
+<msg timestamp="20210727 14:31:25.322" level="INFO">Opening browser 'gc' to base url 'http://equip.stage.shenzyn.com/#/home?ref=bm'.</msg>
+<status status="PASS" starttime="20210727 14:31:25.321" endtime="20210727 14:31:33.904"/>
 </kw>
 <kw name="Set Selenium Implicit Wait" library="SeleniumLibrary">
 <arg>60s</arg>
 <doc>Sets the implicit wait value used by Selenium.</doc>
-<status status="NOT RUN" starttime="20210726 18:15:16.966" endtime="20210726 18:15:16.966"/>
+<status status="PASS" starttime="20210727 14:31:33.904" endtime="20210727 14:31:33.909"/>
 </kw>
 <kw name="Maximize Browser Window" library="SeleniumLibrary">
 <doc>Maximizes current browser window.</doc>
-<status status="NOT RUN" starttime="20210726 18:15:16.966" endtime="20210726 18:15:16.966"/>
+<status status="PASS" starttime="20210727 14:31:33.909" endtime="20210727 14:31:34.095"/>
 </kw>
-<status status="FAIL" starttime="20210726 18:15:12.542" endtime="20210726 18:15:16.966"/>
+<status status="PASS" starttime="20210727 14:31:25.321" endtime="20210727 14:31:34.095"/>
 </kw>
 <kw name="Click Element" library="SeleniumLibrary">
 <arg>${HOMEPAGE_COACHLOGIN_LINK}</arg>
 <doc>Click the element identified by ``locator``.</doc>
-<status status="NOT RUN" starttime="20210726 18:15:16.967" endtime="20210726 18:15:16.967"/>
+<msg timestamp="20210727 14:31:34.096" level="INFO">Clicking element '//button[normalize-space(.)='Coach Login']'.</msg>
+<status status="PASS" starttime="20210727 14:31:34.095" endtime="20210727 14:31:34.292"/>
 </kw>
 <kw name="Input Text" library="SeleniumLibrary">
 <arg>${LOGINPAGE_EMAIL_TEXTFIELD}</arg>
 <arg>${username}</arg>
 <doc>Types the given ``text`` into the text field identified by ``locator``.</doc>
-<status status="NOT RUN" starttime="20210726 18:15:16.967" endtime="20210726 18:15:16.967"/>
+<msg timestamp="20210727 14:31:34.293" level="INFO">Typing text 'arun.i@shenzyn.com' into text field 'emailId'.</msg>
+<status status="PASS" starttime="20210727 14:31:34.293" endtime="20210727 14:31:35.071"/>
 </kw>
 <kw name="Input Password" library="SeleniumLibrary">
 <arg>${LOGINPAGE_PASSWORD_TEXTFIELD}</arg>
 <arg>${password}</arg>
 <doc>Types the given password into the text field identified by ``locator``.</doc>
-<status status="NOT RUN" starttime="20210726 18:15:16.967" endtime="20210726 18:15:16.967"/>
+<msg timestamp="20210727 14:31:35.072" level="INFO">Typing password into text field 'password'.</msg>
+<msg timestamp="20210727 14:31:35.203" level="INFO">Temporally setting log level to: NONE</msg>
+<msg timestamp="20210727 14:31:35.326" level="INFO">Log level changed from NONE to INFO.</msg>
+<status status="PASS" starttime="20210727 14:31:35.072" endtime="20210727 14:31:35.326"/>
 </kw>
 <kw name="Click Element" library="SeleniumLibrary">
 <arg>${LOGINPAGE_SUBMIT_BUTTON}</arg>
 <doc>Click the element identified by ``locator``.</doc>
-<status status="NOT RUN" starttime="20210726 18:15:16.967" endtime="20210726 18:15:16.967"/>
+<msg timestamp="20210727 14:31:35.327" level="INFO">Clicking element '//button[@type='submit']'.</msg>
+<status status="PASS" starttime="20210727 14:31:35.327" endtime="20210727 14:31:35.403"/>
 </kw>
-<status status="FAIL" starttime="20210726 18:15:12.541" endtime="20210726 18:15:16.968"/>
+<status status="PASS" starttime="20210727 14:31:25.320" endtime="20210727 14:31:35.403"/>
 </kw>
-<kw name="Verify Trainees tab visible">
+<status status="PASS" starttime="20210727 14:31:25.306" endtime="20210727 14:31:35.404"/>
+</kw>
+<status status="PASS" starttime="20210727 14:31:25.306" endtime="20210727 14:31:35.404"/>
+</kw>
+<kw name="Then I Verify If Trainees tab is visible" library="authentication_steps">
 <arg>True</arg>
-<status status="NOT RUN" starttime="20210726 18:15:16.968" endtime="20210726 18:15:16.968"/>
+<kw name="Run Keyword If" library="BuiltIn">
+<arg>${condition}</arg>
+<arg>element should be visible</arg>
+<arg>//div[@role="tab" and contains(text(),'Trainees')]</arg>
+<arg>Trainees tab is not visible</arg>
+<arg>ELSE</arg>
+<arg>element should not be visible</arg>
+<arg>//div[@role="tab" and contains(text(),'Trainees')]</arg>
+<arg>Trainees tab is not visible</arg>
+<doc>Runs the given keyword with the given arguments, if ``condition`` is true.</doc>
+<kw name="Element Should Be Visible" library="SeleniumLibrary">
+<arg>//div[@role="tab" and contains(text(),'Trainees')]</arg>
+<arg>Trainees tab is not visible</arg>
+<doc>Verifies that the element identified by ``locator`` is visible.</doc>
+<msg timestamp="20210727 14:31:38.767" level="INFO">Element '//div[@role="tab" and contains(text(),'Trainees')]' is displayed.</msg>
+<status status="PASS" starttime="20210727 14:31:35.406" endtime="20210727 14:31:38.767"/>
 </kw>
-<status status="FAIL" starttime="20210726 18:15:12.541" endtime="20210726 18:15:16.968"/>
+<status status="PASS" starttime="20210727 14:31:35.405" endtime="20210727 14:31:38.767"/>
+</kw>
+<status status="PASS" starttime="20210727 14:31:35.405" endtime="20210727 14:31:38.767"/>
 </kw>
 <kw name="Close All Browsers" library="SeleniumLibrary" type="TEARDOWN">
 <doc>Closes all open browsers and resets the browser cache.</doc>
+<status status="PASS" starttime="20210727 14:31:38.768" endtime="20210727 14:31:41.074"/>
+</kw>
+<tag>Smoke</tag>
+<tag>UI</tag>
+<status status="PASS" starttime="20210727 14:31:25.305" endtime="20210727 14:31:41.074"/>
+</test>
+<doc>Suite to verify Authorization of application</doc>
+<status status="PASS" starttime="20210727 14:31:24.629" endtime="20210727 14:31:41.077"/>
+</suite>
+<kw name="Log To Console" library="BuiltIn" type="TEARDOWN">
+<arg>Things to execute once after all suites</arg>
+<doc>Logs the given message to the console.</doc>
+<status status="PASS" starttime="20210727 14:31:41.080" endtime="20210727 14:31:41.080"/>
+</kw>
+<doc>Suite description</doc>
+<status status="PASS" starttime="20210727 14:31:24.626" endtime="20210727 14:31:41.080"/>
+</suite>
+<status status="PASS" starttime="20210727 14:31:24.587" endtime="20210727 14:31:41.083"/>
+</suite>
+<statistics>
+<total>
+<stat pass="1" fail="0" skip="0">All Tests</stat>
+</total>
+<tag>
+<stat pass="1" fail="0" skip="0">Smoke</stat>
+<stat pass="1" fail="0" skip="0">UI</stat>
+</tag>
+<suite>
+<stat pass="1" fail="0" skip="0" id="s1" name="Testsuites">Testsuites</stat>
+<stat pass="1" fail="0" skip="0" id="s1-s1" name="Ui">Testsuites.Ui</stat>
+<stat pass="1" fail="0" skip="0" id="s1-s1-s1" name="M1 Authentication">Testsuites.Ui.M1 Authentication</stat>
+</suite>
+</statistics>
 <errors>
-<msg timestamp="20210726 18:15:16.964" level="WARN">Keyword 'Capture Page Screenshot' could not be run on failure: Execution terminated by signal</msg>
-<msg timestamp="20210726 18:15:20.001" level="ERROR">Execution stopped by user.</msg>
 </errors>
 </robot>
